# ghidra-jupyter-kotlin

./: .gitattributes  .gitignore  LICENSE  README.md  gradle.properties  settings.gradle
.github/workflows/: gradle.yml  release-python-test.yml  release-python.yml  release.yml  test-kernel-config.json
GhidraJupyterKotlin/: .gitignore  build.gradle  extension.properties  gradle.properties
GhidraJupyterKotlin/.github/workflows/: gradle.yml
GhidraJupyterKotlin/ghidra_scripts/: Dumpx64dbgLabels.kt  HelloWorldScriptKt.kt
GhidraJupyterKotlin/src/main/java/GhidraJupyterKotlin/: CellContext.java  ConnectionFile.java  GhidraKotlinKernelLaunchable.java  InterruptKernelAction.kt  JupyterKotlinPlugin.java  KernelThread.java  KotlinQtConsoleThread.java  LineReader.java  NotebookProxy.java  NotebookThread.java  ShutDownKernelAction.kt
GhidraJupyterKotlin/src/main/java/GhidraJupyterKotlin/extensions/address/: AddressExtensions.kt
GhidraJupyterKotlin/src/main/java/GhidraJupyterKotlin/extensions/data/: DataExtensions.kt
GhidraJupyterKotlin/src/main/java/GhidraJupyterKotlin/extensions/misc/: MiscExtensions.kt
GhidraJupyterKotlin/src/main/java/KotlinScriptProvider/: KotlinScriptProvider.java
GhidraJupyterKotlin/src/main/java/ghidra/app/script/: GhidraMessageCollector.kt  KotlinCompilerMessageCollector.kt  KotlinScriptProvider.java
ghidra_jupyter/: README.md  pyproject.toml  requirements.txt  setup.py
ghidra_jupyter/kernel/: kernel.json
ghidra_jupyter/src/ghidra_jupyter/: dispatcher.py  installer.py
