[project]
name = "ghidra-jupyter"
dynamic = ["version"]
description = "A Jupyter kernel for Ghidra"
readme = "README.md"
license = "MIT"
authors = [{ name = "GhidraJupyter" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=25.3.0",
    "notebook>=7.4.5",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.scripts]
ghidra-jupyter = "ghidra_jupyter.installer:main"

[build-system]
requires = ["hatchling>=1.14", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
root = ".."


[tool.hatch.build.targets.wheel.shared-data]
"kernel/" = "share/jupyter/kernels/ghidra-kotlin"


[project.urls]
Homepage = "https://github.com/GhidraJupyter/ghidra-jupyter-kotlin"
Source = "https://github.com/GhidraJupyter/ghidra-jupyter-kotlin"
Tracker = "https://github.com/GhidraJupyter/ghidra-jupyter-kotlin/issues"
